--- a/ui/src/app/components/game/location/location-activity-progress/location-activity-progress.component.scss
+++ b/ui/src/app/components/game/location/location-activity-progress/location-activity-progress.component.scss
@@ -180,7 +180,7 @@
   border: var(--border-light);
   border-radius: var(--radius-card);
   padding: var(--spacing-l);
-  max-height: var(--spacing-7xl);
+  max-height: 300px;
   overflow-y: auto;
 
   h3 {
