--- a/ui/src/app/components/game/location/location.component.scss
+++ b/ui/src/app/components/game/location/location.component.scss
@@ -250,7 +250,7 @@
   border: var(--border-light);
   border-radius: var(--radius-card);
   padding: var(--spacing-l);
-  max-height: var(--spacing-7xl);
+  max-height: 300px;
   overflow-y: auto;
 
   h3 {
